JumpScript/tests/baselines/reference/alwaysStrictModule2.errors.txt
tests/cases/compiler/a.jump(3,13): error TS1100: Invalid use of 'arguments' in strict mode.
tests/cases/compiler/b.jump(3,13): error TS1100: Invalid use of 'arguments' in strict mode.


==== tests/cases/compiler/a.jump (1 errors) ====
    module M {
        export function f() {
            var arguments = [];
                ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.
        }
    }
    
==== tests/cases/compiler/b.jump (1 errors) ====
    module M {
        export function f2() {
            var arguments = [];
                ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.
        }
    }